#15413 closed bug (fixed)
idualwifi7260 unable to load iwm8265fw firmware file
Reported by: | ambroff | Owned by: | waddlesplash |
---|---|---|---|
Priority: | normal | Milestone: | R1/beta2 |
Component: | Drivers/Network/idualwifi7260 | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
I have an Intel Wireless 8265 card on one of my computers, and when I tried booting Haiku I found that it wasn't working. In syslog the error was just:
KERN: [idualwifi7260] (iwm) could not read firmware iwm8265fw (error 0)
After some debugging I realized that the firmware name map for this driver is slightly wrong. The firmware for my card is the last of seven entries, and the map is set to size 6, so the firmware for my card is not visible in the map.
This patch fixes it for me: https://review.haiku-os.org/c/haiku/+/1917
Change History (3)
comment:1 by , 6 years ago
Component: | - General → Drivers/Network/idualwifi7260 |
---|---|
Owner: | changed from | to
comment:2 by , 6 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
comment:3 by , 5 years ago
Milestone: | Unscheduled → R1/beta2 |
---|
Assign tickets with status=closed and resolution=fixed within the R1/beta2 development window to the R1/beta2 Milestone
Merged in hrev53543.