src/add-ons/kernel/drivers/network/wlan/idualwifi7260/glue.c
@@ -26,7 +26,7 @@ NO_HAIKU_FBSD_MII_DRIVER();
 NO_HAIKU_REENABLE_INTERRUPTS();
 HAIKU_DRIVER_REQUIREMENTS(FBSD_TASKQUEUES | FBSD_WLAN);
 HAIKU_FIRMWARE_VERSION(1);
-HAIKU_FIRMWARE_NAME_MAP(6) = {
+HAIKU_FIRMWARE_NAME_MAP({
 	{"iwm3160fw", "iwm-3160-17.ucode"},
 	{"iwm3168fw", "iwm-3168-22.ucode"},
 	{"iwm7260fw", "iwm-7260-17.ucode"},
@@ -34,7 +34,7 @@ HAIKU_FIRMWARE_NAME_MAP(6) = {
 	{"iwm7265Dfw", "iwm-7265D-22.ucode"},
 	{"iwm8000Cfw", "iwm-8000C-22.ucode"},
 	{"iwm8265fw", "iwm-8265-22.ucode"},
-};
+});
 
 
 int
