src/add-ons/kernel/drivers/network/wlan/realtekwifi/glue.c
@@ -24,11 +24,11 @@
 HAIKU_FBSD_WLAN_DRIVER_GLUE(realtekwifi, rtwn_pci, pci)
 HAIKU_DRIVER_REQUIREMENTS(FBSD_WLAN);
 HAIKU_FIRMWARE_VERSION(0);
-HAIKU_FIRMWARE_NAME_MAP(3) = {
+HAIKU_FIRMWARE_NAME_MAP({
 	{"rtwn-rtl8188eefw", "rtl8188eefw.ucode"},
 	{"rtwn-rtl8192cfwE", "rtl8192cfwE.ucode"},
 	{"rtwn-rtl8192cfwE_B", "rtl8192cfwE_B.ucode"},
-};
+});
 
 NO_HAIKU_FBSD_MII_DRIVER();
 NO_HAIKU_REENABLE_INTERRUPTS();
